--- a/frontend/pages/generate/generate.wxml
+++ b/frontend/pages/generate/generate.wxml
@@ -26,13 +26,13 @@
     <image class="selected-image" bindtap="navigateToSubPage" data-index="0" src="/image/generate/cover/cover_{{coverSelected}}.png"></image>
     <image class="selected-image" bindtap="navigateToSubPage" data-index="1" src="/image/generate/cover/cover_{{coverSelected}}.png" src="/image/generate/paper/paper_{{paperSelected}}.png" style="margin-left: -5vw;"></image>
     <input class="diary-input" bindinput="handleInputTitle" placeholder="请输入标题" />
-    <button class="submit" data-category="{{diaryTitle}}" data-index="{{100*coverSelected+paperSelected}}" bindtap="addEvent" style="width: 180rpx; height: 68rpx; display: block; box-sizing: border-box; left: 230rpx; top: -674rpx">生成</button>
+    <button class="submit" data-category="diary" data-index="{{100*coverSelected+paperSelected}}" bindtap="addEvent" style="width: 180rpx; height: 68rpx; display: block; box-sizing: border-box; left: 230rpx; top: -674rpx">生成</button>
     <block wx:if="{{diaryActiveIndex==0}}">
       <!-- 封面 -->
       <!-- <scroll-view class="scroll-view" scroll-y="true"> -->
         <view class="cover-list" style="left: 1rpx;">
           <block wx:for="{{coverList}}" wx:key="index">
-            <view class="cover-item"  data-category="timeline" data-index="{{index}}" bindtap="selectCover">
+            <view class="cover-item"  data-category="diary" data-index="{{index}}" bindtap="selectCover">
               <image class="cover-image {{index==coverSelected ? 'selected' : ''}}" src="/image/generate/cover/cover_{{index}}.png"></image>
               <image class="select-icon  {{index==coverSelected ? 'selected' : ''}}" src="/image/generate/check-circle.png"></image>
             </view>
@@ -45,7 +45,7 @@
       <!-- <scroll-view class="scroll-view" scroll-y="true"> -->
         <view class="cover-list" style="left: 1rpx;">
           <block wx:for="{{paperList}}" wx:key="index">
-            <view class="cover-item"  data-category="timeline" data-index="{{index}}" bindtap="selectPaper">
+            <view class="cover-item"  data-category="diary" data-index="{{index}}" bindtap="selectPaper">
               <image class="cover-image {{index==paperSelected ? 'selected' : ''}}" src="/image/generate/paper/paper_{{index}}.png"></image>
               <image class="select-icon  {{index==paperSelected ? 'selected' : ''}}" src="/image/generate/check-circle.png"></image>
             </view>
