--- a/frontend/pages/generate/preview/preview.wxss
+++ b/frontend/pages/generate/preview/preview.wxss
@@ -1,7 +1,6 @@
 /* pages/generate/preview/preview.wxss */
 
-@import "/pages/generate/generate.wxss";
-
+/* @import "/pages/generate/generate.wxss"; */
 
 .container{
   margin: 0;
@@ -13,22 +12,41 @@
 
 .preview_container{
   width: 100%;
-  height: 50vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 10vh;
 }
 
 .image-player{
   border: 1px solid grey;
-  width: 60vw;
-  height: 84.9vw;
+  width: 80vw;
+  height:calc(80vw * 1.414);
+  display: flex;
+  flex-direction: column;
+  overflow: scroll;
+  justify-self: center;
+  align-items: center; /* 标签垂直居中对齐 */
+  gap: 2vh;
 }
 
 .image-player image{
   width: 100%;
   height: 100%;
+}
+
+/* 添加滚动条样式，这样滚动条就不可见了，但仍然可以滑动 */
+.image-player::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+.image-player::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.image-player::-webkit-scrollbar-thumb {
+  background-color: transparent;
 }
 
 .select_container{
