perf(front) little change

--- a/backend/static/template/htmls/page.html
+++ b/backend/static/template/htmls/page.html
@@ -32,6 +32,7 @@
         p {
             line-height: 1.5;
             color: #666;
+            white-space: pre-wrap;
         }
 
         .page{
