--- a/frontend/pages/generate/chart/chart.wxml
+++ b/frontend/pages/generate/chart/chart.wxml
@@ -1,4 +1,4 @@
 <!--pages/generate/chart/chart.wxml-->
 <view class="ec-container">
-     <ec-canvas canvas-id="echart-pie" ec="{{ec}}"></ec-canvas>
+     <ec-canvas canvas-id="echart" ec="{{ec}}"></ec-canvas>
 </view>
