--- a/frontend/pages/generate/generate.wxss
+++ b/frontend/pages/generate/generate.wxss
@@ -30,12 +30,49 @@
   align-items: center;
   margin-top: -20vh;
 }
+.audio-list {
+  /* grid-area: 3/1/4/5; */
+  width: 90vw;
+  height: 35vh;
+  display: flex;
+  overflow: scroll;
+  flex-wrap: nowrap;
+  justify-self: center;
+  align-items: center; /* 标签垂直居中对齐 */
+  gap: 25px; /* 标签之间的间距 */
+}
+
+
+
+/* 添加滚动条样式，这样滚动条就不可见了，但仍然可以滑动 */
+.audio-list::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+.audio-list::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.audio-list::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
 
 .timeline-item {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 2vh;
+}
+.pick-audio {
+  position: relative;
+  left: -20vh;
+}
+.audio-image {
+  width: 25vh;
+  height: 25vh;
+  border-radius: 2vh;
+  margin-bottom: 1vh;
+  box-shadow: 0 2rpx 10rpx rgba(0, 0, 0, 0.16);
 }
 
 .timeline-image {
