--- a/frontend/pages/generate/preview/preview.wxss
+++ b/frontend/pages/generate/preview/preview.wxss
@@ -18,7 +18,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 10vh;
+  margin-top: 5vh;
+}
+
+.banner{
+  width: 80vw;
+  color: grey;
+  font-size: 0.9em;
+  margin-bottom: 3vh;
 }
 
 .image-player{
@@ -79,3 +86,26 @@ scroll-view ::-webkit-scrollbar {
   position: relative;
 }
 
+
+#button-box{
+  width: 50vw;
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+.submit{
+  width: 100%;
+  height: 80rpx;
+  background-color: #4095E5;
+  color: #fff;
+  border-radius: 100px;
+  box-shadow: 0 10rpx 10rpx rgba(0, 0, 0, 0.16);
+  font-size: 1.2em;
+  line-height: 60rpx !important;
+  text-align: center !important;
+  vertical-align: middle !important;
+}
