--- a/frontend/pages/generate/add_event/add_event.wxml
+++ b/frontend/pages/generate/add_event/add_event.wxml
@@ -7,8 +7,13 @@
     <button wx:else class="submitButton disabledButton">提交</button>
     <view class="header">通过标签选择</view>
     <view class="container_tag">
-      <view wx:for="{{tags}}" wx:key="index" data-index='{{index}}' class="tag {{item.checked ?     'selected' : ''}}" bindtap="toggleTag">
+      <view wx:if="{{isTagsEmpty}}" class="tag-empty-tip">还没有标签哦~</view>
+      <view wx:else>
+          <view wx:for="{{tags}}" wx:key="index" 
+          data-index='{{index}}' 
+          class="tag {{item.checked ?'selected' :''}}" bindtap="toggleTag">
         <text class="tag-text">{{item.info}}</text>
+          </view>
       </view>
     </view>
 </view>
