--- a/frontend/pages/generate/add_event/add_event.wxml
+++ b/frontend/pages/generate/add_event/add_event.wxml
@@ -6,13 +6,13 @@
     <button wx:if="{{selectedNum!==0}}" class="submitButton" bindtap="handleSubmit">提交({{selectedNum}})</button>
     <button wx:else class="submitButton disabledButton">提交</button>
     <view class="header">通过标签选择</view>
-    <view class="container_tag">
+    <view class="tag-cont">
       <view wx:if="{{isTagsEmpty}}" class="tag-empty-tip">还没有标签哦~</view>
-      <view wx:else>
+      <view wx:else class="container_tag">
           <view wx:for="{{tags}}" wx:key="index" 
           data-index='{{index}}' 
           class="tag {{item.checked ?'selected' :''}}" bindtap="toggleTag">
-        <text class="tag-text">{{item.info}}</text>
+                <text class="tag-text">{{item.info}}</text>
           </view>
       </view>
     </view>
