--- a/frontend/pages/generate/chart/chart.wxml
+++ b/frontend/pages/generate/chart/chart.wxml
@@ -11,3 +11,10 @@
 <view class="ec-container">
      <ec-canvas canvas-id="echart" id="echart" ec="{{ec}}"></ec-canvas>
 </view>
+
+<view class="container_template">
+  <view wx:for="{{templates}}" wx:key="index" data-index='{{index}}' class="template {{item.selected ?     'selected' : ''}}" bindtap="changeTemplate">
+    <image class="timeline-image" src="/image/generate/chart/chart_{{index}}.png"></image>
+  </view>
+</view>
+
