--- a/frontend/pages/generate/chart/chart.wxss
+++ b/frontend/pages/generate/chart/chart.wxss
@@ -79,3 +79,55 @@ ec-canvas {
   width: 100%;
   height: 100%;
 }
+
+.container_template{
+  width: 100vw;
+  height: 20vh;
+  display: flex;
+  overflow: scroll;
+  flex-wrap: nowrap;
+  justify-self: center;
+  align-items: center; /* 标签垂直居中对齐 */
+  gap: 15px; /* 标签之间的间距 */
+}
+
+.container_template::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+.container_template::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.container_template::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
+.template {
+  width: 50vh;
+  height: 15vh;
+  padding: 8rpx 16rpx;
+  border-radius: 4rpx;
+  background: #f0f8ff;
+  border: 1rpx solid #4095E5;
+  border-radius: 10rpx;
+  font-size: 28rpx;
+  color: #4095e598;
+  color: #143e64;
+  cursor: pointer; 
+  margin-left: 2vw;
+}
+
+.timeline-image {
+  width: 20vh;
+  height: 15vh;
+  border-radius: 2vh;
+  margin-bottom: 1vh;
+  box-shadow: 0 2rpx 10rpx rgba(0, 0, 0, 0.16);
+}
+
+.template.selected {
+  background-color: #007bff67;
+  color: #fff;
+}
+
