feat(front): add child_detail page

--- a/frontend/pages/user/child/child.wxml
+++ b/frontend/pages/user/child/child.wxml
@@ -7,7 +7,7 @@
       <text class="user_name">{{item.name}}</text>
       <text class="user_info">年龄：{{item.age}}岁，身高：{{item.height}}cm，体重：{{item.weight}}kg</text>
     </view> -->
-    <child-card name="{{item.name}}" age="{{item.age}}" height="{{item.height}}" weight="{{item.weight}}" imgSrc="{{item.imgSrc}}"></child-card>
+    <child-card name="{{item.name}}" age="{{item.age}}" height="{{item.height}}" weight="{{item.weight}}" imgSrc="{{item.imgSrc}}" data-index="{{index}}" bindtap="goToPage_detail"></child-card>
   </block>
 </view>
 
