--- a/frontend/pages/generate/chart/chart.wxss
+++ b/frontend/pages/generate/chart/chart.wxss
@@ -46,7 +46,7 @@
   padding: 4px 8px;
   border-radius: 4px;
   background: #f0f8ff;
-  border: 1rpx solid #4095E5;
+  border: 1rpx solid #4095e57a;
   border-radius: 10rpx;
   font-size: 28rpx;
   text-align: center;
@@ -109,7 +109,6 @@ ec-canvas {
   padding: 8rpx 16rpx;
   border-radius: 4rpx;
   background: #f0f8ff;
-  border: 1rpx solid #4095E5;
   border-radius: 10rpx;
   font-size: 28rpx;
   color: #4095e598;
@@ -131,3 +130,26 @@ ec-canvas {
   color: #fff;
 }
 
+#container_color{
+  height: 8vh;
+  margin-bottom: -2vh;
+}
+
+.color {
+  width: 8vh;
+  height: 5vh;
+  padding: 8rpx 16rpx;
+  border-radius: 5vh;
+  border-radius: 10rpx;
+  font-size: 28rpx;
+  cursor: pointer; 
+  margin-left: 1vh;
+}
+
+.color-image {
+  width: 8vh;
+  height: 5vh;
+  border-radius: 2vh;
+  margin-bottom: 1vh;
+  box-shadow: 0 2rpx 10rpx rgba(0, 0, 0, 0.16);
+}
