--- a/frontend/pages/user/child/child_detail/child_detail.wxml
+++ b/frontend/pages/user/child/child_detail/child_detail.wxml
@@ -2,5 +2,13 @@
 
 
 <view class="ec-container">
-     <ec-canvas canvas-id="echart" ec="{{ec}}"></ec-canvas>
+     <ec-canvas canvas-id="echart" ec="{{ec_radar}}"></ec-canvas>
+</view>
+
+<view class="ec-container">
+     <ec-canvas canvas-id="echart" ec="{{ec_tag1}}"></ec-canvas>
+</view>
+
+<view class="ec-container_2">
+     <ec-canvas canvas-id="echart" ec="{{ec_tag2}}"></ec-canvas>
 </view>
