--- a/frontend/pages/user/child/child_detail/child_detail.wxss
+++ b/frontend/pages/user/child/child_detail/child_detail.wxss
@@ -1,10 +1,15 @@
 /* pages/user/child/child_detail/child_detail.wxss */
 
 .ec-container {
-  width: 120vw;
+  width: 150vw;
+  height: 50vh;
+  z-index: -1;
+}
+
+.ec-container_2 {
+  width: 100vw;
   height: 40vh;
   z-index: -1;
-  margin-left: 8vw;
 }
 
 ec-canvas {
