--- a/frontend/pages/show/event/event.wxss
+++ b/frontend/pages/show/event/event.wxss
@@ -1,18 +1,5 @@
 /* pages/show/event/event.wxss */
-.whole-page-grid{
-  display: grid;
-  grid-template-rows: 10vh 1fr 30vh 10vh 1fr;
-  grid-template-columns: 1fr;
-  grid-template-areas:
-  "A"
-  "B"
-  "C"
-  "D"
-  "E";
-  height:100vh;
-  justify-content: stretch;
-  align-items: stretch; 
-}
+
 
 .overall-outfit{
   padding: 20rpx;
@@ -131,9 +118,10 @@
 }
 
 .input_text {
-  width: 85vw;
+  margin-right: 10%;
+  margin-top: 5%;
+  width: 70vw;
   height: 20vh;
-  padding: 10rpx;
   border: 1rpx solid rgba(220, 220, 220, 0.5);
   border-radius: 4rpx;
   font-size: 14px;
@@ -147,6 +135,8 @@
 }
 
 .container_tag{
+  margin-top: 5%;
+  margin-right: 60%;
   display: flex;
   flex-wrap: wrap;
   align-items: center; /* 标签垂直居中对齐 */
@@ -227,17 +217,9 @@
 }
 
 #button-box{
-    width: 50vw;
-    height: 10vh;
 }
 
 .submit{
-  position: relative;
-  left: 0px;
-  bottom: 15px;
-  /* margin-left: 100px; */
-  margin-top: 30px;
-
   width: 100%;
   height: 80rpx;
   background-color: #4095E5;
@@ -245,4 +227,5 @@
   border-radius: 100px;
   box-shadow: 0 10rpx 10rpx rgba(0, 0, 0, 0.16);
   font-size: 14px;
+  margin-bottom: auto;
 }
