--- a/frontend/pages/generate/preview/preview_video/preview_video.wxml
+++ b/frontend/pages/generate/preview/preview_video/preview_video.wxml
@@ -11,15 +11,15 @@
 
 <view class='custom-tabbar'>
   <view class='icons'>
-    <image src="/image/preview/gallery.png" style="height: 6vh; width: 6vh" bind:tap="goToShow"></image>
-    <image src="/image/preview/template.png" style="height: 6vh; width: 6vh" bind:tap="goToPlan"></image>
+    <image src="/image/preview/gallery.png" style="height: 6vh; width: 6vh" bind:tap="reselectEvent"></image>
+    <image src="/image/preview/template.png" style="height: 6vh; width: 6vh" bind:tap="reselectTemplate"></image>
     <image src="/image/preview/download.png" style="height: 6vh; width: 6vh" bind:tap="handleDownload"></image>
-    <image src="/image/preview/share.png" style="height: 6vh; width: 6vh" bind:tap="goToUser"></image>
+    <image src="/image/preview/share.png" style="height: 6vh; width: 6vh" bind:tap="handleShare"></image>
   </view>
   <view class='icons-text'>
-    <text>更换事件</text>
-    <text>更换模板</text>
-    <text>保存到本地</text>
-    <text>分享</text>
+    <text bind:tap="reselectEvent">更换事件</text>
+    <text bind:tap="reselectTemplate">更换模板</text>
+    <text bind:tap="handleDownload">保存到本地</text>
+    <text bind:tap="handleShare">分享</text>
   </view>
 </view>
