--- a/frontend/pages/show/show.wxss
+++ b/frontend/pages/show/show.wxss
@@ -1,4 +1,18 @@
 /* pages/show/show.wxss */
+
+.searchbar-result{
+  margin-top:0;
+  font-size:0.8235294117647058rem}
+
+.searchbar-result .weui-cell__bd{
+  padding:2px 0 2px 20px;
+  color:var(--weui-FG-1)
+}
+
+.searchbar-result::before{
+  display:none
+} 
+
 .container {
   text-align: center;
   padding: 0;
