--- a/frontend/pages/show/seach_result/search_result.wxml
+++ b/frontend/pages/show/seach_result/search_result.wxml
@@ -1,2 +1,15 @@
 <!--pages/show/seach_result/search_result.wxml-->
-<text>展示{{eventId}}</text>
+
+
+<view class="container">
+  <view class="cards-container">
+    <view wx:for="{{blog_cards_list}}" wx:key="index" data-index='{{index}}' data-type='{{item.type}}' bindtap="showDetail">
+        <event-card wx:if="{{item.type=='event'}}" day="{{item.day}}" month="{{item.month}}" author="{{item.author}}" title="{{item.title}}" body="{{item.content}}" imgSrc="{{item.imgSrc}}" ></event-card>
+        <text-card wx:elif="{{item.type=='text'}}" day="{{item.day}}" month="{{item.month}}" author="{{item.author}} " title="{{item.title}}" body="{{item.content}}" ></text-card>
+        <data-card wx:elif="{{item.type=='data'}}" day="{{item.day}}" month="{{item.month}}" author="{{item.author}}" title="{{item.title}}" body="{{item.content}}" ></data-card>
+    </view>
+
+  </view>
+  
+</view>
+
