--- a/frontend/pages/generate/add_event/add_event.wxml
+++ b/frontend/pages/generate/add_event/add_event.wxml
@@ -11,7 +11,7 @@
       <view wx:else class="container_tag">
           <view wx:for="{{tags}}" wx:key="index" 
             data-index='{{index}}' 
-            class="tag" bindtap="toggleTag">
+            class="tag {{item.checked ? 'selected' : ''}}" bindtap="toggleTag">
             <text class="tag-text">{{item.info}}</text>
           </view>
       </view>
