--- a/frontend/pages/user/about_us/about_us.wxml
+++ b/frontend/pages/user/about_us/about_us.wxml
@@ -4,6 +4,17 @@
   <view class="weui-cells__group weui-cells__group_form">
     <view class="weui-cells weui-cells_form">
       <view class="weui-cell weui-cell_active">
+        <view class="weui-cell__hd"><label class="weui-label">开发团队</label></view>
+      </view>
+    </view>
+  </view>
+</view>
+
+
+<view class="weui-form__control-area">
+  <view class="weui-cells__group weui-cells__group_form">
+    <view class="weui-cells weui-cells_form">
+      <view class="weui-cell weui-cell_active">
         <view class="weui-cell__hd"><label class="weui-label">协议与规则</label></view>
       </view>
     </view>
@@ -15,6 +26,16 @@
     <view class="weui-cells weui-cells_form">
       <view class="weui-cell weui-cell_active">
         <view class="weui-cell__hd"><label class="weui-label">隐私政策</label></view>
+      </view>
+    </view>
+  </view>
+</view>
+
+<view class="weui-form__control-area">
+  <view class="weui-cells__group weui-cells__group_form">
+    <view class="weui-cells weui-cells_form">
+      <view class="weui-cell weui-cell_active">
+        <view class="weui-cell__hd"><label class="weui-label">源代码</label></view>
       </view>
     </view>
   </view>
