--- a/frontend/pages/show/event/event.wxss
+++ b/frontend/pages/show/event/event.wxss
@@ -135,7 +135,7 @@
 }
 
 .container_tag{
-  margin-top: 5%;
+  margin-top: 2vh;
   display: flex;
   flex-wrap: wrap;
   align-items: center; /* 标签垂直居中对齐 */
@@ -197,6 +197,8 @@
   margin-left: -70px;
   font-size: 12px;
   width: 70px;
+  padding: 2px;
+  height: 22px;
   border-radius: 4px;
   border: 1px solid #007bff65;
   color: #007bff65;
