--- a/frontend/pages/generate/preview/preview_video/preview_video.wxml
+++ b/frontend/pages/generate/preview/preview_video/preview_video.wxml
@@ -2,7 +2,7 @@
 <view>
   <view class="weui-form__text-area">
 			<h2 class="weui-form__title">{{video_title}}</h2>
-			<view class="weui-form__desc">预览小视频，可进行更换、保存与分享</view>
+			<view class="weui-form__desc" style="color: var(--weui-FG-1); font-size: 15px;">预览生成的小视频，可进行更换、保存与分享</view>
 		</view>
   <!-- <view class="title">{{video_title}}</view> -->
   <video class="video" src="{{video_src}}" binderror="videoErrorCallback" bindenterpictureinpicture='bindVideoEnterPictureInPicture' bindleavepictureinpicture='bindVideoLeavePictureInPicture' object-fit="contain" show-fullscreen-btn="true" direction="0">
