--- a/frontend/pages/generate/generate.wxml
+++ b/frontend/pages/generate/generate.wxml
@@ -99,7 +99,8 @@
         <view class="audio-list">
           <block wx:for="{{audioList}}" wx:key="index">
             <view class="timeline-item audio-item"  data-category="audio"    data-index="{{index}}" bindtap="addAudio">
-              <image class="audio-image" src="/image/generate/audio/audio_{{index}}.png"></image>
+              <image class="audio-image {{index==audioSelected? 'selected' : ''}}" src="/image/generate/audio/audio_{{index}}.png"></image>
+              <image class="select-icon  {{index==audioSelected ? 'selected' : ''}}" src="/image/generate/check-circle.png"></image>
               <text class="timeline-name">{{item.name}}</text>
             </view>
           </block>
