feat(front): change font size and color on event and text page

--- a/frontend/pages/show/text/text.wxml
+++ b/frontend/pages/show/text/text.wxml
@@ -78,7 +78,7 @@
         <view style='width: 100%;'>
           <view class="weui-cell__hd"><label class="weui-label">内容</label></view>
           <!-- <textarea class="input_text" bindinput="handleInputText" placeholder="请输入" maxlength="1024"/> -->
-          <view class="weui-cell__bd" style="margin-top: 2vh; font-size: 14px;">
+          <view class="weui-cell__bd" style="margin-top: 2vh; font-size: 2vh;">
                       <textarea class="weui-textarea" placeholder="请输入" placeholder-class="weui-input__placeholder" rows="3" bindinput="handleInputText"></textarea>
                       <!-- <view aria-role="option" class="weui-textarea-counter"><span>0</span>/200</view> -->
           </view>
