--- a/frontend/pages/show/event/event.wxss
+++ b/frontend/pages/show/event/event.wxss
@@ -6,6 +6,19 @@
   width: 100%;
 }
 
+.weui-cells__title {
+  font-size: 1.7vh;
+}
+.weui-label{
+  font-size: 2vh;
+  color: rgb(99, 100, 100);
+
+}
+.weui-input {
+  font-size: 2vh;
+}
+
+
 .container_1 {
   grid-area: A;
   font-size: 14px;
