--- a/frontend/pages/register/register.wxss
+++ b/frontend/pages/register/register.wxss
@@ -43,13 +43,16 @@
 }
 .create-familyId {
   font-size: 14px;
-  color: blue;
+  color: #4095E5;
   text-decoration: underline;
   margin-left: 10%;
+  display: block;
+  float: left;
+
 }
 .cancel {
   font-size: 14px;
-  color: blue;
+  color: #4095E5;
   text-decoration: underline;
   display: block;
   float: right;
@@ -84,7 +87,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   width: 100%;
   height:30vw;
-  margin-left: 10%;
+  margin-left: 5%;
 } 
 
 .image-grid-item{
@@ -93,6 +96,7 @@
   position: relative;
   width: 25vw;
   height:25vw; /*设置高度宽度相等*/
+  margin-bottom: 2vh;
 }
 
 .image-grid-item image{
@@ -255,4 +259,17 @@
   border-radius: 100px;
   box-shadow: 0 10rpx 10rpx rgba(0, 0, 0, 0.16);
   font-size: 14px;
+}
+
+
+.weui-cells__title {
+  font-size: 1.7vh;
+}
+.weui-label{
+  font-size: 2vh;
+  color: rgb(99, 100, 100);
+
+}
+.weui-input {
+  font-size: 2vh;
 }
