--- a/frontend/components/child-card/child-card.wxss
+++ b/frontend/components/child-card/child-card.wxss
@@ -11,10 +11,10 @@
 }
 
 .user_profile {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  margin-right: 10px;
+  width: 70px;
+  height: 70px;
+  border-radius: 1vh;
+  margin-right: 1vh;
 }
 
 .user_name {
