--- a/frontend/pages/user/child/addchild/addchild.wxml
+++ b/frontend/pages/user/child/addchild/addchild.wxml
@@ -3,9 +3,10 @@
 <view class="whole-page-grid">
   <view class="weui-form__control-area">
   <view class="weui-cells__group weui-cells__group_form">
+    <view class="weui-cells__title">添加孩子信息</view>
     <view class="weui-cells weui-cells_form">
       <view class="weui-cell weui-cell_active">
-        <view class="weui-cell__hd"><label class="weui-label">昵称</label></view>
+        <view class="weui-cell__hd"><label class="weui-label">姓名</label></view>
         <view class="weui-cell__bd weui-flex">
           <input
                 class="weui-input"
